syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.paymentic.adapter.in.grpc";
option java_outer_classname = "PaymentProcessing";

package user;

// The user's transaction service
service UserTransactionsService{
  // Gets the user's month average
  rpc GetUserMonthAverage (UserMonthAverageRequest) returns (UserMonthAverageResponse) {}
}

// The request message containing the user's document and month
message UserMonthAverageRequest{
  string document = 1;
  string month = 2;
}

// The response message containing month's total
message UserMonthAverageResponse {
  string month = 1;
  string document = 2;
  string total = 3;
}
